✨ : add the auth systeme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=jo-backend
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/jodb
 spring.datasource.username=postgres
 spring.datasource.password=mario
 
 spring.jpa.hibernate.ddl-auto=update
+
+security.jwt.secret-key=pKM9ksrk4JRiirl1i9XVLezAVxdaawB1mYaSg4rDtTI=
+security.jwt.expiration-time=3600000
