🧑‍💻 : dockerize the api and db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=jo-backend
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/jodb
+spring.datasource.url=jdbc:postgresql://db:5432/jodb
 spring.datasource.username=postgres
 spring.datasource.password=mario
 
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 security.jwt.secret-key=pKM9ksrk4JRiirl1i9XVLezAVxdaawB1mYaSg4rDtTI=
 security.jwt.expiration-time=3600000
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
