🐛 : ingore if sql init fail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ security.jwt.expiration-time=3600000
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+spring.sql.init.continue-on-error
